--- a/package.json
+++ b/package.json
@@ -37,6 +37,8 @@
     "jest": "^23.5.0"
   },
   "dependencies": {
+    "classnames": "^2.2.6",
+    "paginator": "^1.0.0",
     "prop-types": "^15.6.2",
     "react": "^16.4.2",
     "react-dom": "^16.4.2",
