--- a/package.json
+++ b/package.json
@@ -38,10 +38,12 @@
   },
   "dependencies": {
     "classnames": "^2.2.6",
+    "formik": "^1.3.1",
     "paginator": "^1.0.0",
     "prop-types": "^15.6.2",
     "react": "^16.4.2",
     "react-dom": "^16.4.2",
+    "react-select": "^2.1.0",
     "uuid": "^3.3.2"
   },
   "jest": {
