--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "prop-types": "^15.6.2",
     "react": "^16.4.2",
     "react-dom": "^16.4.2",
+    "react-router-dom": "^4.3.1",
     "react-select": "^2.1.0",
     "uuid": "^3.3.2"
   },
