--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
     "react-dom": "^16.4.2",
     "react-router-dom": "^4.3.1",
     "react-select": "^2.1.0",
+    "simplemde": "^1.11.2",
     "uuid": "^3.3.2"
   },
   "jest": {
