--- a/package.json
+++ b/package.json
@@ -40,9 +40,11 @@
   "dependencies": {
     "classnames": "^2.2.6",
     "formik": "^1.3.1",
+    "moment": "^2.22.2",
     "paginator": "^1.0.0",
     "prop-types": "^15.6.2",
     "react": "^16.4.2",
+    "react-datepicker": "^1.8.0",
     "react-dom": "^16.4.2",
     "react-router-dom": "^4.3.1",
     "react-select": "^2.1.0",
