--- a/package.json
+++ b/package.json
@@ -49,6 +49,7 @@
     "react-froala-wysiwyg": "^2.9.1",
     "react-router-dom": "^4.3.1",
     "react-select": "^2.1.0",
+    "react-time-input": "0.0.19",
     "simplemde": "^1.11.2",
     "uuid": "^3.3.2"
   },
